--- a/workflows/main.yml
+++ b/workflows/main.yml
@@ -19,12 +19,14 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
+        working-directory: backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest coverage
 
       - name: Run tests with coverage
+        working-directory: backend
         run: |
           pytest --maxfail=1 --disable-warnings --cov=src --cov-report=term-missing
 
@@ -42,7 +44,6 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set image tag (commit short SHA)
-        id: vars
         run: echo "IMAGE_TAG=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
 
       - name: Build and push Docker image
@@ -51,6 +52,6 @@ jobs:
           IMAGE_NAME: openbiz-backend
         run: |
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest \
-                       -t $DOCKERHUB_USERNAME/$IMAGE_NAME:${IMAGE_TAG} .
+                       -t $DOCKERHUB_USERNAME/$IMAGE_NAME:${IMAGE_TAG} ./backend
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:${IMAGE_TAG}
