--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,14 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Set environment variables from GitHub Secrets
+        run: |
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> $GITHUB_ENV
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> $GITHUB_ENV
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+          echo "TEST_DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
+
       - name: Install dependencies
         working-directory: backend
         run: |
@@ -37,6 +45,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set environment variables from GitHub Secrets
+        run: |
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> $GITHUB_ENV
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> $GITHUB_ENV
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+          echo "TEST_DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -51,7 +67,13 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: openbiz-backend
         run: |
-          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest \
-                       -t $DOCKERHUB_USERNAME/$IMAGE_NAME:${IMAGE_TAG} ./backend
+          docker build \
+            --build-arg POSTGRES_USER=${POSTGRES_USER} \
+            --build-arg POSTGRES_PASSWORD=${POSTGRES_PASSWORD} \
+            --build-arg POSTGRES_DB=${POSTGRES_DB} \
+            --build-arg DATABASE_URL=${DATABASE_URL} \
+            --build-arg TEST_DATABASE_URL=${TEST_DATABASE_URL} \
+            -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest \
+            -t $DOCKERHUB_USERNAME/$IMAGE_NAME:${IMAGE_TAG} ./backend
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:${IMAGE_TAG}
